--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node --require tsconfig-paths/register ./node_modules/typeorm/cli",
+    "migration-run": "npm run typeorm migration:run -- -d ./typeorm.config.ts",
+    "migration-generate": "npm run typeorm -- -d ./typeorm.config.ts migration:generate ./migrations/$npm_config_name",
+    "migration-create": "npm run typeorm -- migration:create ./migrations/$npm_config_name",
+    "migration-revert": "npm run typeorm -- -d ./typeorm.config.ts migration:revert"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.536.0",
     "@nestjs/common": "^10.0.0",
-    "@nestjs/config": "^3.2.0",
+    "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "*",
@@ -67,7 +72,7 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
