Develop WebSocket functionality for generating and dispatching notifications

--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.4",
+    "@nestjs/platform-socket.io": "^10.3.7",
+    "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/websockets": "^10.3.7",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.0.3",
+    "cron": "^3.1.6",
     "file-type": "^16.0.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
