--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "cloudinary": "^2.0.3",
     "cron": "^3.1.6",
     "file-type": "^16.0.0",
+    "install": "^0.13.0",
     "multer": "^1.4.5-lts.1",
+    "node": "^18.20.2",
+    "node-pre-gyp": "^0.17.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
