--- a/vercel.json
+++ b/vercel.json
@@ -25,7 +25,7 @@
       {
         "src": "/(.*)",
         "dest": "src/main.ts",
-        "methods": ["GET", "POST", "PUT", "DELETE"]
+        "methods": ["GET", "POST", "PATCH", "DELETE"]
       }
     ],
 
