refactor vercel json

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
 
     "env": {
         "DB_HOST":"ep-holy-mud-a5pgra22.us-east-2.aws.neon.tech",
-        "DB_PORT":5432,
+        "DB_PORT":"5432",
         "DB_USERNAME":"okoloarthur4",
         "DB_PASSWORD":"qu0sWQiH2ePh",
         "DB_NAME":"userDb",
@@ -11,7 +11,7 @@
         "JWT-SECRET":"Deathg0d",
         "CLOUDINARY_CLOUD_NAME":"dwjde2mmh",
         "CLOUDINARY_API_SECRET":"cJ0zH8jy0i7MCKi90sLE6oHGzL0",
-        "CLOUDINARY_API_KEY":114588383121158
+        "CLOUDINARY_API_KEY":"114588383121158"
     },
 
     "builds": [
