--- a/vercel.json
+++ b/vercel.json
@@ -32,7 +32,7 @@
     "crons": [
       {
         "path": "/user/:id/notify-user/:notify",
-        "schedule": "0 0 11 * * *"
+        "schedule": "0 11 * * *"
       }
     ]
   }
