--- a/vercel.json
+++ b/vercel.json
@@ -18,9 +18,7 @@
       {
         "src": "src/main.ts",
         "use": "@vercel/node"
-      },
-      { "src": "*.js", "use": "@vercel/node" },
-      { "src": "*.ts", "use": "@vercel/node" }
+      }
     ],
     
     "routes": [
@@ -36,5 +34,12 @@
         "path": "/user/:id/notify-user/:notify",
         "schedule": "0 11 * * *"
       }
-    ]
+    ],
+
+    "functions": {
+      "api/**/*.ts": {
+        "memory": 3009,
+        "maxDuration": 30
+      }
+    }
   }
