--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,13 @@
         "CLOUDINARY_API_SECRET":"cJ0zH8jy0i7MCKi90sLE6oHGzL0",
         "CLOUDINARY_API_KEY":"114588383121158"
     },
+
+    "builds": [
+      {
+        "src": "src/main.ts",
+        "use": "@vercel/node"
+      }
+    ],
     
     "routes": [
       {
@@ -27,11 +34,5 @@
         "path": "/user/:id/notify-user/:notify",
         "schedule": "0 11 * * *"
       }
-    ],
-
-    "functions": {
-      "api/**/*.js": {
-        "memory": 1024
-      }
-    }
+    ]
   }
