--- a/vercel.json
+++ b/vercel.json
@@ -23,7 +23,7 @@
     
     "routes": [
       {
-        "src": "/api",
+        "src": "/(.*)",
         "dest": "src/main.ts",
         "methods": ["GET", "POST", "PATCH", "DELETE"]
       }
