--- a/vercel.json
+++ b/vercel.json
@@ -23,6 +23,11 @@
     
     "routes": [
       {
+        "src": "/api",
+        "dest": "src/main.ts",
+        "methods": ["GET"]
+      },
+      {
         "src": "/(.*)",
         "dest": "src/main.ts",
         "methods": ["GET", "POST", "PATCH", "DELETE"]
